added onclick events to listen for correct answer. Also to doc time if wrong answer is chosen

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="button-bin"></div>
     </main>
 
-    <footer class="footer" id="footer">
+    <footer id="footer">
     </footer>
     <script src="Assets/script.js"></script>
 </body>
