game timer established, answer feedback established, game timer penalized for wrong answers

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <nav id="nav"></nav>
     <main class="main-content">
         <h1 id="h1"></h1>
-        <h3 id="h3"></h3>
+        <!-- <h3 id="h3"></h3> -->
         <p id="pTag1"></p>
         <div id="button-bin"></div>
+        <h4 id="answer-feedback"></h4>
     </main>
 
     <footer id="footer">
