--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <h1 id="h1"></h1>
         <!-- <h3 id="h3"></h3> -->
         <p id="pTag1"></p>
+        <div id="button-start"></div>
         <div id="button-bin"></div>
         <h4 id="answer-feedback"></h4>
+        <ul id="score-list"></ul>
     </main>
 
     <footer id="footer">
